# ProjetosMS671

./: .gitignore  README.md
Projeto1/: .gitignore  README.md  config.py  generate_comparison_plots.py  generate_comparison_plots_hard.py  inference.py  main.py  model.py  predict_ultralytics.py  pyproject.toml  run_experiments.py  run_experiments_metrics.py  run_parameter_sweep.py  utils.py  weights.py
Projeto2/: README.md  pyproject.toml
Projeto2/data/: dataset.csv  dataset.json
Projeto2/data/vocabularies/: human_vocab.json  inv_machine_vocab.json  machine_vocab.json
Projeto2/src/: experiment_epochs.py  ingest_data.py  main.py  model.py  plot_attention_map.py  preprocess_data.py  string_to_int.py
